Fix `JacksonJsonUtils` for Java 8 compatibility